--- a/includes/footer-en.html
+++ b/includes/footer-en.html
@@ -39,7 +39,7 @@
                         <li><a href="#shops">Where to Find</a></li>
                         <li><a href="#blog">Articles</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
+                        <li><a href="../privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </nav>
