--- a/includes/header-en.html
+++ b/includes/header-en.html
@@ -58,12 +58,12 @@
                             <li><a href="#society-members">Members</a></li>
                         </ul>
                     </li>
-                    <li><a href="#news" class="nav-link">News</a></li>
-                    <li><a href="#shops" class="nav-link">Where to Find</a></li>
-                    <li><a href="#blog" class="nav-link">Articles</a></li>
+                    <li><a href="../news/index.html" class="nav-link">News</a></li>
+                    <li><a href="../shops/index.html" class="nav-link">Where to Find</a></li>
+                    <li><a href="../blog/index.html" class="nav-link">Articles</a></li>
                     <li><a href="#100year-project" class="nav-link">100-Year Project</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
-                    <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
+                    <li><a href="../privacy.html" class="nav-link">Privacy Policy</a></li>
                 </ul>
 
                 <!-- SNS Links in Menu -->
