--- a/includes/footer-fr.html
+++ b/includes/footer-fr.html
@@ -39,7 +39,7 @@
                         <li><a href="#shops">Où Trouver</a></li>
                         <li><a href="#blog">Articles</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="privacy.html">Politique de Confidentialité</a></li>
+                        <li><a href="../privacy.html">Politique de Confidentialité</a></li>
                     </ul>
                 </div>
             </nav>
