--- a/includes/header-fr.html
+++ b/includes/header-fr.html
@@ -58,12 +58,12 @@
                             <li><a href="#society-members">Membres</a></li>
                         </ul>
                     </li>
-                    <li><a href="#news" class="nav-link">Actualités</a></li>
-                    <li><a href="#shops" class="nav-link">Où Trouver</a></li>
-                    <li><a href="#blog" class="nav-link">Articles</a></li>
+                    <li><a href="../news/index.html" class="nav-link">Actualités</a></li>
+                    <li><a href="../shops/index.html" class="nav-link">Où Trouver</a></li>
+                    <li><a href="../blog/index.html" class="nav-link">Articles</a></li>
                     <li><a href="#100year-project" class="nav-link">Projet 100 Ans</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
-                    <li><a href="privacy.html" class="nav-link">Politique de Confidentialité</a></li>
+                    <li><a href="../privacy.html" class="nav-link">Politique de Confidentialité</a></li>
                 </ul>
 
                 <!-- SNS Links in Menu -->
